fix button hint spacing

--- a/src/components/Timer/Timer.scss
+++ b/src/components/Timer/Timer.scss
@@ -20,4 +20,6 @@ kbd {
   line-height: 1;
   padding: 2px 4px;
   white-space: nowrap;
+  margin-right: 2px;
+  transform: translateY(-1px);
 }
